@@ -1,7 +1,6 @@
 Function: extern
-Class: gp
 Section: programming/specific
-C-Name: extern0
+C-Name: gpextern
 Prototype: s
 Help: extern(str): execute shell command str, and feeds the result to GP (as
  if loading from file).
