@@ -46,14 +46,10 @@ void alarm0(long s);
 void dbg_down(long k);
 GEN  dbg_err(void);
 void dbg_up(long k);
-GEN  extern0(const char *cmd);
-GEN  externstr(const char *cmd);
 GEN  gp_alarm(long s, GEN code);
 void gp_quit(long exitcode);
 GEN  input0(void);
 void pari_breakpoint(void);
-GEN  readstr(const char *s);
-void system0(const char *cmd);
 int  whatnow(PariOUT *out, const char *s, int silent);
 GEN sd_breakloop(const char *v, long flag);
 GEN sd_echo(const char *v, long flag);
